			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01av: *********************************

BUG: (12/10/04, SMR) Selecting a bus pin does not grab all nets on that pin (Bug #77).
FIX: In Highlighter.getHighlightedNetworks(), look at all arcs connected to a pin.

BUG: (12/10/04, SMR) Locking cells may crash when changes are made (Bug #84).
FIX: Moved all calls to CircuitChanges.cantEdit to be inside of jobs.

BUG: (12/9/04, SMR) Waveform window does not always show the full hierarchy of signal names (Bug #82).
FIX: In WaveformWindow.getSignalsForExplorer(), ensure that all levels of the signal name hierarchy are created.

BUG: (12/9/04, SMR) Spice netlister may mix-up ground signal names (Bug #81).
FIX: Change Spice.getGroundName to return null.

IMP/MAN: (12/9/04, SMR) "Layer Visibility" dialog also lets you "highlight" layers.

BUG: (12/9/04, SMR) Resizing a window doesn't always redraw its contents.
FIX: In EditWindow.java, queue resizing, just like panning and zooming.

************************* Version 8.01au: *********************************

BUG: (12/9/04, SMR) Going "Up Hierarchy" may display the cell twice (Bug #74).
FIX: In EditWindow.upHierarchy(), do not request full display if adjusting view.

BUG: (12/9/04, GVG) DRC bug related to active contacts touching transistors (function activeOnTransistorRecurse):
     wrong detection of poly ports (Bug #72).
FIX: search based on names instead of networks otherwise active ports connected to poly via other contacts get ignored

IMP: (12/9/04, GVG) ERC profiling results: (1) less getWellLayerType calls (2) no checkForAbort in visitNodeInst

BUG: (12/9/04, DN) Thousands of ArrayIndexOutOfBoundsException drawing Highlights (Bug #79).
FIX: Addition check isActuallyLinked() in Netlist class.y

BUG: (12/9/04, DN) Network tool crashes if cell contains cell from it's own cellgroup (Bug #75).